--- a/client/styles/sections/LkMainPage.sass
+++ b/client/styles/sections/LkMainPage.sass
@@ -40,7 +40,7 @@
       margin-bottom: $px14
       &:last-child
         margin-bottom: 0
-      a
+      div.ListElemWrapper
         width: 100%
         background-color: #fff
         padding: calc(#{$index} * 1)
