--- a/client/styles/sections/SessionPage.sass
+++ b/client/styles/sections/SessionPage.sass
@@ -76,7 +76,9 @@
                 font-weight: 700
                 margin-right: $px12
               span
-                colro: #484848
+                color: #484848
+                &:last-child
+                  margin-left: $px12
             h4
               font-size: $px18
           .RightSide
@@ -98,7 +100,7 @@
   .ChatPopupInner
     position: absolute
     width: 100%
-    height: 90%
+    height: 30%
     background-color: #ffffff
     border-radius: calc(#{$index} * .8)
     bottom: 0
@@ -114,7 +116,7 @@
       &:hover
         transform: scale(1.1)
     .MessageField
-      width: calc(100% - #{$index} * 2)
+      width: calc(100% - #{$index} * 7)
       position: absolute
       padding: calc(#{$index} * .7) calc(#{$index} * .9)
       background-color: #fff
@@ -123,6 +125,13 @@
       resize: none
       outline: none !important
       height: calc(#{$index} * 3)
+
+    button
+      position: absolute
+      @include oftenBtn
+      bottom: $index
+      width: calc(#{$index} * 4)
+      right: calc(#{$index} * 1)
 
   .TopLineWrapper
     display: flex
