--- a/client/styles/sections/Header.sass
+++ b/client/styles/sections/Header.sass
@@ -8,6 +8,7 @@
   .ExitWrapper
     display: flex
     align-items: center
+    margin-left: auto
     & > div
       display: flex
       align-items: center
@@ -24,7 +25,7 @@
   .data
     display: flex
     align-items: center
-    margin-left: auto
+    //margin-left: auto
     span
       font-weight: 600
       font-size: $px20
