--- a/client/styles/sections/LkMainPage.sass
+++ b/client/styles/sections/LkMainPage.sass
@@ -35,9 +35,11 @@
     color: $accentSecond
     text-align: center
     margin-bottom: calc(#{$index} * 1)
+
   ul
     li.LkSessionListElem
       margin-bottom: $px14
+
       &:last-child
         margin-bottom: 0
       div.ListElemWrapper
@@ -65,5 +67,10 @@
           button
             @include oftenBtn
             font-weight: 600
+
+.ProfessorColor
+  background-color: #d79797 !important
+  color: #000
+  text-align: right !important
 
 
